--- a/configuration/templates/account/approval-fail.hbs
+++ b/configuration/templates/account/approval-fail.hbs
@@ -1,4 +1,4 @@
-<div class="sign-up-form container-content content-page container-centred container-home">
+<div class="container-fluid b-padding-full v-margin-full">
   <h2>{{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} account approval</h2>
   <p>
     {{#compare @root.data.accountInfo.user_type "===" "Volunteer"}}Parent or guardian{{else}}Group administrator{{/compare}} approval has failed. Please <a href="mailto:support@saltireawards.org.uk">contact us</a> for assistance.
