--- a/configuration/templates/account/approval-pass.hbs
+++ b/configuration/templates/account/approval-pass.hbs
@@ -1,4 +1,4 @@
-<div class="sign-up-form container-content content-page container-centred container-home">
+<div class="container-fluid b-padding-full v-margin-full">
   <h2>{{#compare @root.data.accountInfo.user_type "Volunteer"}}Parent or guardian{{else}}Group Administrator{{/compare}}  account approval</h2>
   <p>
     Approval successful. {{@root.data.accountInfo.first_name}} will now be able to use all the features of this site.
