--- a/configuration/templates/account/reset-password.hbs
+++ b/configuration/templates/account/reset-password.hbs
@@ -1,41 +1,30 @@
-<form id="reset-password-form" method="POST" class="reset-password-form">
-  <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--content-primary">
-      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
-        Reset password
-      </div>
-      <div class="mdc-card__info--content-primary-title mdc-typography--body2 x-padding">
-        Enter your email address to be sent a password reset link
+<form id="reset-password-form" method="POST" class="authentication-form">
+  <h1 class="x-padding">
+    Reset password
+  </h1>
+  <p class="l-margin r-margin">
+    Enter your email address to be sent a password reset link
+  </p>
+  <div class="l-margin r-margin">
+    <div id="reset-password-message">
+      <span id="form-message"></span>
+    </div>
+  </div>
+  <div class="x-padding">
+    <div class="mdc-typography--body1" id="form-section-email">
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="email" id="reset-password-email" placeholder="Email" required />
+        <span class="form-icon far fa-at"></span>
       </div>
     </div>
-    <div class="l-margin-full r-margin-full">
-      <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="reset-password-message">
-        <span id="form-message"></span>
-      </div>
+    <div id="form-section-sign-in-buttons" class="t-margin">
+      <button class="btn btn-primary" type="submit" id="reset-password-submit">
+        Send reset link
+      </button>
     </div>
-    <div class="mdc-card__info x-padding-full">
-      <div class="mdc-typography--body1" id="form-section-email">
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="email" id="reset-password-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="reset-password-email" class="mdc-floating-label">Email</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-      </div>
-      <div id="form-section-sign-in-buttons">
-        <button class="mdc-button mdc-button--raised" type="submit" id="reset-password-submit">
-          Send reset link
-        </button>
-      </div>
-      <div class="card-loader" id="reset-password-loader">
-        <div class="card-loader-inner">
-          <span class="far fa-2x fa-spinner-third fa-spin"></span>
-        </div>
+    <div class="card-loader" id="reset-password-loader">
+      <div class="card-loader-inner">
+        <span class="far fa-2x fa-spinner-third fa-spin"></span>
       </div>
     </div>
   </div>
