--- a/configuration/templates/pages/home-authenticated.hbs
+++ b/configuration/templates/pages/home-authenticated.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid container-content">
+<div class="container b-padding-full v-margin-full">
   <h1 class="mdc-typography--headline4">
     {{#if @root.data.isAdmin ~}}
       {{@root.route.metaData.adminTitle}}
@@ -20,6 +20,9 @@
     <a href="/search">Find a volunteering opportunity</a>
   </p>
   {{/if ~}}
+
+  <div class="divider b-margin-full"></div>
+
   <h2 class="mdc-typography--headline6">
     Support &amp; information
   </h2>
