--- a/configuration/templates/pages/verify-hours-pass.hbs
+++ b/configuration/templates/pages/verify-hours-pass.hbs
@@ -1,4 +1,4 @@
-<div class="container-content content-account">
+<div class="container b-padding-full v-margin-full">
   <h2>Hours verification</h2>
   <p>Hours verification successful!</p>
 </div>
