--- a/configuration/templates/volunteering/opportunity.hbs
+++ b/configuration/templates/volunteering/opportunity.hbs
@@ -1,4 +1,4 @@
-<div class="container-content {{#if @root.data.auth}}content-volunteering{{else}}content-page container-centred{{/if}}" instance_id="perm">
+<div class="container">
   {{> volunteering_search_form}}
   {{#compare @root.data.primaryResponse.hits.total ">" 0 ~}}
   <div class="content-primary">
