--- a/configuration/partials/account/sign-in-social.hbs
+++ b/configuration/partials/account/sign-in-social.hbs
@@ -1,11 +1,11 @@
-<div class="button-row">
-  <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
+<div class="social">
+  <button class="btn" id="continue-with-google" type="button">
     <span class="fab fa-2x google-logo"><img src="https://storage.googleapis.com/scvo-assets/test/volunteerscotland-search/images/logos/g-logo.png" /></span> Sign in with Google
   </button>
-  <button class="disabled mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
+  <button class="btn" id="continue-with-twitter" type="button">
     <span class="fab fa-twitter-square fa-2x"></span> Sign in with Twitter
   </button>
-  <button class="disabled mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
+  <button class="btn" id="continue-with-facebook" type="button">
     <span class="fab fa-facebook-square fa-2x"></span> Sign in with Facebook
   </button>
 </div>
