--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -2,16 +2,8 @@
 {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
 {{#each contacts ~}}
 {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
-<div class="mdc-layout-grid">
-  <div class="mdc-layout-grid__inner">
-    {{#ifAll logo website ~}}
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
-      <p>
-        <a href="{{fixUrl website}}" target="_blank"><img src="{{logo}}" class="responsive-img" alt="{{title}}" /></a>
-      </p>
-    </div>
-    {{/ifAll ~}}
-    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-4-phone">
+  <div class="columns col-gapless">
+    <div class="{{#ifAll logo website}}col-9{{else}}col{{/ifAll}}">
       <p>
         Your {{#compare @root.data.accountInfo.user_type "Group Admin"}}{{#if area}}{{area}}{{else}}{{../local_authority}}{{/if}} TSI{{else}}Saltire{{/compare}} contact is
         <strong>{{title}}</strong>.<br />
@@ -26,8 +18,14 @@
         {{#if youtube}}<a href="{{fixUrl youtube}}" target="_blank"><span class="fab fa-youtube fa-fw fa-2x"></span></a>{{/if}}
       </p>
     </div>
+    {{#ifAll logo website ~}}
+    <div class="col-3">
+      <p class="r-margin-full">
+        <a href="{{fixUrl website}}" target="_blank"><img src="{{logo}}" class="responsive-img" alt="{{title}}" /></a>
+      </p>
+    </div>
+    {{/ifAll ~}}
   </div>
-</div>
 {{/if ~}}
 {{/each ~}}
 {{/with ~}}
