--- a/configuration/templates/account/sign-in.hbs
+++ b/configuration/templates/account/sign-in.hbs
@@ -1,77 +1,58 @@
-<form id="sign-in-form" method="POST" class="sign-in-form">
-  <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--content-primary">
-      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
-        {{#if @root.request.params.query.reauth}}
-          Please sign in again
-        {{else}}
-          Welcome back! Please sign in
-        {{/if}}
-      </div>
-      {{#if @root.request.params.query.reauth}}
-        <div class="mdc-card__info--content-primary-title mdc-typography--headline5 x-padding">
-          Before you can do that you must sign in again
-        </div>
-      {{/if}}
+<form id="sign-in-form" method="POST" class="authentication-form container-fluid">
+  <h1 class="x-padding">
+    {{#if @root.request.params.query.reauth}}
+      Please sign in again
+    {{else}}
+      Welcome back! Please sign in
+    {{/if}}
+  </h1>
+  {{#if @root.request.params.query.reauth}}
+  <p class="x-padding">
+    Before you can do that you must sign in again
+  </p>
+  {{/if}}
+  <div class="l-margin r-margin">
+    <div class="x-padding-full" id="sign-in-message">
+      <span id="form-message"></span>
     </div>
-    <div class="l-margin-full r-margin-full">
-      <div class="mdc-card__info x-padding-full mdc-theme--secondary-bg mdc-theme--on-secondary" id="sign-in-message">
-        <span id="form-message"></span>
+  </div>
+  <div class="x-padding">
+    <div id="form-section-email">
+      {{> account_sign_in_social loaderSelector="#sign-in-loader" messageSelector="#sign-in-message"}}
+
+      <div class="divider text-center v-margin-full" data-content="or"></div>
+
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="email" id="sign-in-email" placeholder="Email" />
+        <span class="form-icon far fa-at"></span>
+      </div>
+
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="password" id="sign-in-password" placeholder="Password" />
+        <span class="form-icon far fa-key"></span>
       </div>
     </div>
-    <div class="mdc-card__info x-padding-full">
-      <div class="mdc-typography--body1" id="form-section-email">
-        {{> account_sign_in_social loaderSelector="#sign-in-loader" messageSelector="#sign-in-message"}}
-
-        <div class="middle-line-text">
-          <span>or</span>
-        </div>
-
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="email" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-in-email" class="mdc-floating-label">Email</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-in-password" class="mdc-floating-label">Password</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
+    <div id="form-section-sign-in-buttons" class="t-margin">
+      <button class="btn btn-primary" type="submit" id="sign-in-submit">
+        Sign in
+      </button>
+      <div class="v-margin-full">
+        Forgot your password? <a href="/reset-password">Reset password</a>
       </div>
-      <div id="form-section-sign-in-buttons">
-        <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
-          Sign in
-        </button>
-        <div class="mdc-typography--body1 v-margin-full">
-          Forgot your password? <a href="/reset-password">Reset password</a>
-        </div>
-        <div class="mdc-typography--body1 v-margin-full">
-          Read our <a href="/privacy" target="_blank">privacy notice</a>
-        </div>
-        <h2 class="mdc-typography--headline6">
-          Not registered?
-        </h2>
-        <div class="mdc-typography--body1 v-margin-full">
-          <a href="/sign-up" class="mdc-button mdc-button--raised">Sign up for a free account</a>
-        </div>
+      <div class="v-margin-full">
+        Read our <a href="/privacy" target="_blank">privacy notice</a>
       </div>
-      <div class="card-loader" id="sign-in-loader">
-        <div class="card-loader-background"></div>
-        <div class="card-loader-inner">
-          <span class="far fa-2x fa-spinner-third fa-spin"></span>
-        </div>
+      <h2>
+        Not registered?
+      </h2>
+      <div class="v-margin-full">
+        <a href="/sign-up" class="btn btn-primary">Sign up for a free account</a>
+      </div>
+    </div>
+    <div class="card-loader" id="sign-in-loader">
+      <div class="card-loader-background"></div>
+      <div class="card-loader-inner">
+        <span class="far fa-2x fa-spinner-third fa-spin"></span>
       </div>
     </div>
   </div>
