--- a/configuration/templates/account/sign-up-admin.hbs
+++ b/configuration/templates/account/sign-up-admin.hbs
@@ -1,83 +1,79 @@
-<form id="sign-up-form" method="POST" class="sign-in-form sign-up-form">
-  <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--content-primary">
-      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
-        Group administrator sign up
-      </div>
+<form id="sign-up-form" method="POST" class="authentication-form container">
+  <h1 class="x-padding">
+    Group administrator sign up
+  </h1>
+  <div class="l-margin r-margin">
+    <div id="sign-up-message">
+      <span id="form-message"></span>
     </div>
-    <div class="l-margin-full r-margin-full">
-      <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-up-message">
-        <span id="form-message"></span>
+  </div>
+  <div class="x-padding">
+    <div id="form-section-email">
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+        <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+        <input type="email" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
+        <div class="mdc-notched-outline">
+          <div class="mdc-notched-outline__leading"></div>
+          <div class="mdc-notched-outline__notch">
+            <label for="sign-up-email" class="mdc-floating-label">Email</label>
+          </div>
+          <div class="mdc-notched-outline__trailing"></div>
+        </div>
       </div>
-    </div>
-    <div class="mdc-card__info x-padding-full">
-      <div class="mdc-typography--body1" id="form-section-email">
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="email" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-email" class="mdc-floating-label">Email</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+        <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+        <input type="email" id="sign-up-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
+        <div class="mdc-notched-outline">
+          <div class="mdc-notched-outline__leading"></div>
+          <div class="mdc-notched-outline__notch">
+            <label for="sign-up-email-confirm" class="mdc-floating-label">Confirm email</label>
           </div>
+          <div class="mdc-notched-outline__trailing"></div>
         </div>
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="email" id="sign-up-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-email-confirm" class="mdc-floating-label">Confirm email</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
+      </div>
 
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-up-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-password" class="mdc-floating-label">Password</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+        <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+        <input type="password" id="sign-up-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
+        <div class="mdc-notched-outline">
+          <div class="mdc-notched-outline__leading"></div>
+          <div class="mdc-notched-outline__notch">
+            <label for="sign-up-password" class="mdc-floating-label">Password</label>
           </div>
-        </div>
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-up-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-password-confirm" class="mdc-floating-label">Confirm password</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
+          <div class="mdc-notched-outline__trailing"></div>
         </div>
       </div>
-      <div id="form-section-sign-up-buttons">
-        <button class="mdc-button mdc-button--raised" type="submit" id="sign-up-submit">
-          Sign up
-        </button>
-        <div class="mdc-typography--body1 v-margin-full">
-          Read our <a href="/privacy" target="_blank">privacy notice</a>
-        </div>
-        <div class="mdc-typography--body1 v-margin-full">
-          Already have an account? <a href="/sign-in">Sign in</a>
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+        <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+        <input type="password" id="sign-up-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
+        <div class="mdc-notched-outline">
+          <div class="mdc-notched-outline__leading"></div>
+          <div class="mdc-notched-outline__notch">
+            <label for="sign-up-password-confirm" class="mdc-floating-label">Confirm password</label>
+          </div>
+          <div class="mdc-notched-outline__trailing"></div>
         </div>
       </div>
-      <div class="card-loader" id="sign-up-loader">
-        <div class="card-loader-background"></div>
-        <div class="card-loader-inner">
-          <span class="far fa-2x fa-spinner-third fa-spin"></span>
-        </div>
+    </div>
+    <div id="form-section-sign-up-buttons">
+      <button class="mdc-button mdc-button--raised" type="submit" id="sign-up-submit">
+        Sign up
+      </button>
+      <div class="mdc-typography--body1 v-margin-full">
+        Read our <a href="/privacy" target="_blank">privacy notice</a>
+      </div>
+      <div class="mdc-typography--body1 v-margin-full">
+        Already have an account? <a href="/sign-in">Sign in</a>
+      </div>
+    </div>
+    <div class="card-loader" id="sign-up-loader">
+      <div class="card-loader-background"></div>
+      <div class="card-loader-inner">
+        <span class="far fa-2x fa-spinner-third fa-spin"></span>
       </div>
     </div>
   </div>
-  <input type="hidden" name="redirect" id="redirect" value="home"/>
+  <input type="hidden" name="redirect" id="redirect" value="home" />
 </form>
 
 <script type="text/javascript">
