--- a/configuration/templates/account/sign-up-details.hbs
+++ b/configuration/templates/account/sign-up-details.hbs
@@ -1,5 +1,5 @@
-<div class="sign-up-form container-content content-page container-centred container-home">
-  <h2 class="mdc-typography--headline4">Add your details</h2>
+<div class="container-fluid b-padding-full v-margin-full">
+  <h1>Add your details</h1>
 
   <div class="mdc-typography--headline6 b-margin-full">
     {{#unless @root.request.params.query.redirect}}
