--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -1,84 +1,50 @@
-<form id="sign-up-form" method="POST" class="sign-in-form sign-up-form">
-  <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--content-primary">
-      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
+<form id="sign-up-form" method="POST" class="authentication-form container-fluid">
+  <h1 class="x-padding">
+    Sign up
+  </h1>
+  <div class="l-margin r-margin">
+    <div id="sign-up-message">
+      <span id="form-message"></span>
+    </div>
+  </div>
+  <div class="x-padding">
+    <div id="form-section-email">
+      {{> account_sign_in_social loaderSelector="#sign-up-loader" messageSelector="#sign-up-message"}}
+
+      <div class="divider text-center v-margin-full" data-content="or"></div>
+
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="email" id="sign-up-email" placeholder="Email" required />
+        <span class="form-icon far fa-at"></span>
+      </div>
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="email" id="sign-up-email-confirm" placeholder="Confirm email" data-lpignore="true" autocomplete="off" required />
+        <span class="form-icon far fa-at"></span>
+      </div>
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="password" id="sign-up-password" placeholder="Password" data-lpignore="true" autocomplete="off" required />
+        <span class="form-icon far fa-key"></span>
+      </div>
+      <div class="form-group has-icon-left">
+        <input class="form-input" type="password" id="sign-up-password-confirm" placeholder="Confirm password" data-lpignore="true" autocomplete="off" required />
+        <span class="form-icon far fa-key"></span>
+      </div>
+    </div>
+    <div id="form-section-sign-up-buttons" class="t-margin">
+      <button class="btn btn-primary" type="submit" id="sign-up-submit">
         Sign up
+      </button>
+      <div class="v-margin-full">
+        Read our <a href="/privacy" target="_blank">privacy notice</a>
+      </div>
+      <div class="v-margin-full">
+        Already have an account? <a href="/sign-in">Sign in</a>
       </div>
     </div>
-    <div class="l-margin-full r-margin-full">
-      <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-up-message">
-        <span id="form-message"></span>
-      </div>
-    </div>
-    <div class="mdc-card__info x-padding-full">
-      <div class="mdc-typography--body1" id="form-section-email">
-        {{> account_sign_in_social loaderSelector="#sign-up-loader" messageSelector="#sign-up-message"}}
-
-        <div class="middle-line-text">
-          <span>or</span>
-        </div>
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="email" id="sign-up-email" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-email" class="mdc-floating-label">Email</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="email" id="sign-up-email-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-email-confirm" class="mdc-floating-label">Confirm email</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-up-password" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-password" class="mdc-floating-label">Password</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-        <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-up-password-confirm" class="mdc-text-field__input mdc-text-field--fullwidth" data-lpignore="true" autocomplete="off" />
-          <div class="mdc-notched-outline">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch">
-              <label for="sign-up-password-confirm" class="mdc-floating-label">Confirm password</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-      </div>
-      <div id="form-section-sign-up-buttons">
-        <button class="mdc-button mdc-button--raised" type="submit" id="sign-up-submit">
-          Sign up
-        </button>
-        <div class="mdc-typography--body1 v-margin-full">
-          Read our <a href="/privacy" target="_blank">privacy notice</a>
-        </div>
-        <div class="mdc-typography--body1 v-margin-full">
-          Already have an account? <a href="/sign-in">Sign in</a>
-        </div>
-      </div>
-      <div class="card-loader" id="sign-up-loader">
-        <div class="card-loader-background"></div>
-        <div class="card-loader-inner">
-          <span class="far fa-2x fa-spinner-third fa-spin"></span>
-        </div>
+    <div class="card-loader" id="sign-up-loader">
+      <div class="card-loader-background"></div>
+      <div class="card-loader-inner">
+        <span class="far fa-2x fa-spinner-third fa-spin"></span>
       </div>
     </div>
   </div>
