--- a/configuration/templates/blog/post.hbs
+++ b/configuration/templates/blog/post.hbs
@@ -1,17 +1,15 @@
-<div class="container-content content-page container-centred">
-  <div class="b-padding-full b-margin-full">
-    {{#each @root.data.primaryResponse.hits.hits ~}}
-    {{#with _source ~}}
-    <h1 class="mdc-typography--headline4">
-      {{{title}}}
-    </h1>
-    <div class="mdc-typography--body2 b-margin">
-      Posted {{momentFormat (moment publish_on "x") "Do MMM YYYY"}}
-    </div>
-    <div class="mdc-typography--body1">
-      {{{content}}}
-    </div>
-    {{/with ~}}
-    {{/each ~}}
+<div class="container b-padding-full v-margin-full">
+  {{#each @root.data.primaryResponse.hits.hits ~}}
+  {{#with _source ~}}
+  <h1>
+    {{{title}}}
+  </h1>
+  <div class="caption b-margin">
+    Posted {{momentFormat (moment publish_on "x") "Do MMM YYYY"}}
   </div>
+  <div class="post-content">
+    {{{content}}}
+  </div>
+  {{/with ~}}
+  {{/each ~}}
 </div>
