--- a/configuration/templates/pages/achievements.hbs
+++ b/configuration/templates/pages/achievements.hbs
@@ -1,4 +1,4 @@
-<div id="detailed-results-container" class="container-content content-achievements">
+<div class="container b-padding-full v-margin-full">
   <h1 class="mdc-typography--headline4">
     My achievements
   </h1>
