--- a/configuration/templates/pages/hours.hbs
+++ b/configuration/templates/pages/hours.hbs
@@ -1,5 +1,5 @@
-<div id="detailed-results-container" class="container-content content-hours">
-  <h1 class="mdc-typography--headline4">
+<div class="container b-padding-full v-margin-full">
+  <h1>
     {{#if @root.data.isAdmin ~}}
     {{@root.route.metaData.adminTitle}}
     {{else}}
