--- a/configuration/templates/pages/page.hbs
+++ b/configuration/templates/pages/page.hbs
@@ -1,14 +1,12 @@
-<div class="container-content content-page container-centred">
-  <div class="b-padding-full b-margin-full">
-    {{#compare @root.data.primaryResponse.hits.total ">" 0 ~}}
-    <h1 class="mdc-typography--headline4">
-      {{{@root.data.primaryResponse.hits.hits.[0]._source.title}}}
-    </h1>
-    {{{@root.data.primaryResponse.hits.hits.[0]._source.content}}}
-    {{else}}
-    <h2 class="mdc-typography--headline5">
-      Error 404: Page not found
-    </h2>
-    {{/compare ~}}
-  </div>
+<div class="container b-padding-full v-margin-full">
+  {{#compare @root.data.primaryResponse.hits.total ">" 0 ~}}
+  <h1>
+    {{{@root.data.primaryResponse.hits.hits.[0]._source.title}}}
+  </h1>
+  {{{@root.data.primaryResponse.hits.hits.[0]._source.content}}}
+  {{else}}
+  <h2>
+    Error 404: Page not found
+  </h2>
+  {{/compare ~}}
 </div>
