--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -1,10 +1,10 @@
-<div class="container-content content-hours">
-  <h1 class="mdc-typography--headline4">
+<div class="container b-padding-full v-margin-full">
+  <h1>
     Add a task
   </h1>
 
   {{#withExtend this admin=(compare @root.data.accountInfo.user_type 'Group Admin') ~}}
-    <h2 class="mdc-typography--headline6">
+    <h2>
       Task details
     </h2>
 
